@@ -13,7 +13,7 @@ package ch.bfh.uniboard.service;
 
 import java.io.Serializable;
 import java.util.Arrays;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 /**
  * Wrapper for the byte array variables
@@ -57,7 +57,7 @@ public class ByteArrayValue implements Value<byte[]>, Serializable {
 
 	@Override
 	public String toString() {
-		return "ByteArrayValue{" + "value=" + DatatypeConverter.printBase64Binary(value) + '}';
+		return "ByteArrayValue{" + "value=" + Base64.getEncoder().encodeToString(value) + '}';
 	}
 
 }
